--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.1",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
+    "@noble/curves": "^1.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -19,7 +25,18 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@solana/wallet-adapter-ant-design": "^0.11.31",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-material-ui": "^0.16.33",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.34",
+    "@solana/wallet-adapter-wallets": "^0.19.23",
+    "@solana/wallet-standard-features": "^1.1.0",
+    "@solana/wallet-standard-util": "^1.1.0",
+    "@solana/web3.js": "^1.87.4",
+    "antd": "^5.11.0",
     "axios": "^1.5.1",
+    "bs58": "^5.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cookies-next": "^4.0.0",
@@ -28,6 +45,8 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.279.0",
     "next": "latest",
+    "notistack": "^3.0.1",
+    "pino-pretty": "^10.2.3",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
@@ -36,6 +55,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ufo": "^1.3.1",
     "use-breakpoint": "^3.1.1",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.1"
   },
@@ -43,6 +63,7 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "autoprefixer": "latest",
