fix: fix connection / publicKey

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "lodash-es": "^4.17.21",
+    "lokijs": "^1.5.12",
     "lucide-react": "^0.279.0",
     "next": "latest",
     "notistack": "^3.0.1",
@@ -68,6 +69,7 @@
     "@typescript-eslint/parser": "^6.7.3",
     "autoprefixer": "latest",
     "cssnano": "^6.0.1",
+    "encoding": "^0.1.13",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^9.0.0",
