--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "autoprefixer": "latest",
+    "bigint-buffer": "^1.1.5",
     "cssnano": "^6.0.1",
     "encoding": "^0.1.13",
     "eslint": "latest",
