--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3030",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -35,6 +35,8 @@
     "@solana/wallet-standard-features": "^1.1.0",
     "@solana/wallet-standard-util": "^1.1.0",
     "@solana/web3.js": "^1.87.4",
+    "@tanstack/react-query": "^5.12.2",
+    "@tanstack/react-query-devtools": "^5.12.2",
     "antd": "^5.11.0",
     "axios": "^1.6.2",
     "bs58": "^5.0.0",
