--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
@@ -55,6 +56,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
     "react-use": "^17.4.0",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "ufo": "^1.3.1",
