--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@noble/curves": "^1.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@solana/wallet-adapter-ant-design": "^0.11.31",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-material-ui": "^0.16.33",
@@ -45,6 +47,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cookies-next": "^4.0.0",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^3.0.6",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "lodash-es": "^4.17.21",
@@ -54,8 +58,9 @@
     "notistack": "^3.0.1",
     "pino-pretty": "^10.2.3",
     "react": "latest",
+    "react-day-picker": "^8.10.0",
     "react-dom": "latest",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.49.2",
     "react-use": "^17.4.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
@@ -69,6 +74,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
