--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "contractus-web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "21.x"
+  },
   "scripts": {
     "dev": "next dev -p 3030",
     "build": "next build",
