--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "latest",
     "react-hook-form": "^7.49.2",
+    "react-tooltip": "^5.26.2",
     "react-use": "^17.4.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
