--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@next/third-parties": "^14.1.0",
     "@noble/curves": "^1.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
