--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@sentry/nextjs": "^7.106.0",
     "@solana/wallet-adapter-ant-design": "^0.11.31",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-material-ui": "^0.16.33",
